Updated my connection using mongoose. Created a new swagger.json file.
